eb.a7n.de is set automatically on startup

--- a/drupalgap/pages/setup.html
+++ b/drupalgap/pages/setup.html
@@ -14,7 +14,7 @@
     	<h3>2. Add Drupal Site</h3>
   	</div><!-- /header -->
   	<div data-role="content">
-  		<input type="text" id="drupalgap_page_setup_site_url" value="http://www.drupalgap.org"/>
+  		<input type="text" id="drupalgap_page_setup_site_url" value="http://eb.a7n.de"/>
       	<p></p>
       	<fieldset>
 	      <div><button type="button" data-theme="b" id="drupalgap_page_setup_connect">Connect</button></div>
