there is no font style bold in css

--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -22,5 +22,7 @@
 			<p><a href="comments_all.html" data-role="button" id="drupalgap_button_comments" style='display: none;'>Comments</a></p>
 	  	<hr />
 	  	<p><a href="configuration.html" data-role="button">DrupalGap Configuration</a></p>
+	  	<hr />
+	  	<p><a href="start.html" data-role="button">LocalMarket</a></p>
 	</div><!-- /content -->
 </div><!-- /page -->
