--- a/drupalgap/pages/user_register.html
+++ b/drupalgap/pages/user_register.html
@@ -1,33 +1,36 @@
 <div data-role="page" id="drupalgap_page_user_register">
   <div data-role="header">
-  	<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
+  	<a href="user_login.html" data-icon="home" class="ui-btn-left">Login</a>
     <h1>Register</h1>
   </div><!-- /header -->
   <div data-role="content" class='content'>
   	<div id='drupalgap_page_user_register_messages' class='messages'></div>
+  	  <p>
+      	<a class="info" href="../dialogs/infos/dialog_info_register_name.html" data-rel="dialog" data-transition="pop">Infos zum Login und Datenschutz</a>
+      </p>
+      <p>
+      	
+      </p>
     <div>
       <label for="drupalgap_user_register_name">Username *</label>
       <input type="text" id="drupalgap_user_register_name" />
-      <p>Spaces are allowed; punctuation is not allowed except for periods, hyphens, apostrophes, and underscores.</p>
     </div>
     <div>
-      <label for="drupalgap_user_register_pass">E-mail address *</label>
+      <label for="drupalgap_user_register_pass">eMail *</label>
       <input type="text" id="drupalgap_user_register_mail" />
-      <p>A valid e-mail address. All e-mails from the system will be sent to this address. The e-mail address is not made public and will only be used if you wish to receive a new password or wish to receive certain news or notifications by e-mail.</p>
     </div>
     <fieldset>
 	    <div>
-	      <label for="drupalgap_user_register_pass">Password</label>
+	      <label for="drupalgap_user_register_pass">Passwort</label>
 	      <input type="password" id="drupalgap_user_register_pass" />
 	    </div>
 	    <div>
-	      <label for="drupalgap_user_register_confirm_pass">Confirm password</label>
+	      <label for="drupalgap_user_register_confirm_pass">Passwort bestätigen</label>
 	      <input type="password" id="drupalgap_user_register_confirm_pass" />
-	      <p>Provide a password for the new account in both fields.</p>
 	    </div>
     </fieldset>
     <fieldset>
-      <div><button type="button" data-theme="b" id="drupalgap_user_register_submit">Create new account</button></div>
+      <div><button type="button" data-theme="b" id="drupalgap_user_register_submit">Account anlegen</button></div>
     </fieldset>
   </div><!-- /content -->
 </div><!-- /page -->
