arbeit finden, start on dashboard for development

--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -18,6 +18,69 @@
 		</ul>
 	</div><!-- /navbar -->
 	<div data-role="content">
+		
+
+        <div data-role="collapsible-set" data-theme="c" data-content-theme="b">
+            <div data-role="collapsible" data-collapsed="false">
+                <h3>
+                    Aktuelles Angebot!
+                </h3>
+                <div>
+                    <b>
+                        Wir suchen für den 5. &amp; 6. Januar 2012 jemanden zum Schneeräumen da wir im Urlaub sind.
+                    </b>
+                </div>
+                <div class="ui-grid-a">
+                    <div class="ui-block-a">
+                        <a data-role="button" data-transition="fade" href="#page1">
+                            Details
+                        </a>
+                    </div>
+                    <div class="ui-block-b">
+                        <a data-role="button" data-transition="fade" href="#page1">
+                            Hide
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
+            Arbeit finden
+        </a>
+        <a data-role="button" data-transition="fade" href="#page1">
+            Arbeit anbieten
+        </a>
+        <div class="ui-grid-b">
+            <div class="ui-block-a">
+                <a data-role="button" data-transition="fade" href="#page1">
+                    Einstellungen
+                </a>
+            </div>
+            <div class="ui-block-b">
+                <div data-role="fieldcontain">
+                    <fieldset data-role="controlgroup">
+                        <label for="toggleswitch1">
+                            Live Suche
+                        </label>
+                        <select name="toggleswitch1" id="toggleswitch1" data-theme="c" data-role="slider" data-mini="true">
+                            <option value="off">
+                                Aus
+                            </option>
+                            <option value="on">
+                                An
+                            </option>
+                        </select>
+                    </fieldset>
+                </div>
+            </div>
+            <div class="ui-block-c">
+                <a data-role="button" data-transition="fade" href="#page1">
+                    Postfach
+                </a>
+            </div>
+        </div>
+    </div>
+    	<hr />
 			<p><a href="content.html" data-role="button" id="drupalgap_button_content" style='display: none;'>Content</a></p>
 			<p><a href="comments_all.html" data-role="button" id="drupalgap_button_comments" style='display: none;'>Comments</a></p>
 	  	<hr />
