--- a/drupalgap/pages/start.html
+++ b/drupalgap/pages/start.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <a data-role="button" data-transition="fade" href="#page1">
+        <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
         <a data-role="button" data-transition="fade" href="#page1">
