testcommit seems github has hickups

--- a/drupalgap/pages/arbeit_finden-listenansicht.html
+++ b/drupalgap/pages/arbeit_finden-listenansicht.html
@@ -1,4 +1,9 @@
 <div data-role="page" id="page1">
+	<div data-role="header">
+  		<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
+    	<h1>Comment</h1>
+    	<a href="comment_edit.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_comment_button_edit" style='display: none;'>Edit</a>
+  	</div><!-- /header -->
             <div data-role="content">
                 <ul data-role="listview" data-divider-theme="b" data-inset="true">
                     <li data-role="list-divider" role="heading">
