--- a/drupalgap/pages/arbeit_finden-listenansicht.html
+++ b/drupalgap/pages/arbeit_finden-listenansicht.html
@@ -1,38 +1,39 @@
 <div data-role="page" id="page1">
 	<div data-role="header">
   		<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
-    	<h1>Comment</h1>
-    	<a href="comment_edit.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_comment_button_edit" style='display: none;'>Edit</a>
+    	<h1>Arbeit finden</h1>
+    	<a href="einstellungen-filter-arbeit_finden.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_arbeit_finden_button_filtern">Filtern</a>
   	</div><!-- /header -->
-            <div data-role="content">
-                <ul data-role="listview" data-divider-theme="b" data-inset="true">
-                    <li data-role="list-divider" role="heading">
-                        Divider
-                    </li>
-                    <li data-theme="c">
-                        <a href="#page1" data-transition="slide">
-                            Koch
-                        </a>
-                    </li>
-                    <li data-theme="c">
-                        <a href="#page1" data-transition="slide">
-                            Küchenchef
-                        </a>
-                    </li>
-                </ul>
-                <div data-role="navbar" data-iconpos="top">
-                    <ul>
-                        <li>
-                            <a href="#page1" data-theme="" data-icon="">
-                                Kartenansicht
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#page1" data-theme="" data-icon="">
-                                Filtern
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<!-- /header -->
+    <div data-role="content">
+        <ul data-role="listview" data-divider-theme="c" data-inset="true">
+            <li data-role="list-divider" role="heading">
+                Arbeitsangebote in Ihrer Umgebung
+            </li>
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    <span class="title">Koch</span><span class="payment">15 € / Stunde</span><span class="distance">2,9 km</span>
+                </a>
+            </li>
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    <span class="title">Küchenchef</span><span class="payment">35 € / Stunde</span><span class="distance">2,9 km</span>
+                </a>
+            </li>
+            <li data-theme="c">
+                <a href="#page1" data-transition="slide">
+                    <span class="title">Minijob Küchenhilfe (Helfer/in - Küche)</span><span class="payment">8 € / Stunde</span><span class="distance">5.3 km</span>
+                </a>
+            </li>
+        </ul>
+        <div data-role="navbar" data-iconpos="top">
+            <ul>
+                <li>
+                    <a href="arbeit_finden-kartenansicht.html" data-theme="c" data-icon="grid">
+                        Kartenansicht
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
         </div>
