Arbeit anbieten html files

--- a/drupalgap/pages/user_register.html
+++ b/drupalgap/pages/user_register.html
@@ -21,11 +21,11 @@
     </div>
     <fieldset>
 	    <div>
-	      <label for="drupalgap_user_register_pass">Passwort</label>
+	      <label for="drupalgap_user_register_pass">Passwort*</label>
 	      <input type="password" id="drupalgap_user_register_pass" />
 	    </div>
 	    <div>
-	      <label for="drupalgap_user_register_confirm_pass">Passwort bestätigen</label>
+	      <label for="drupalgap_user_register_confirm_pass">Passwort bestätigen*</label>
 	      <input type="password" id="drupalgap_user_register_confirm_pass" />
 	    </div>
     </fieldset>
