Revert "Arbeit anbieten html files"
This reverts commit a1a26adf6bbc9aa04666b068a28e450e09595f6f.

--- a/drupalgap/dialogs/infos/dialog_info_register_name.html
+++ b/drupalgap/dialogs/infos/dialog_info_register_name.html
@@ -1,6 +1,23 @@
+
+<!DOCTYPE html> 
+<html>
+	<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<title>jQuery Mobile Framework - Dialog Example</title> 
+	<link rel="stylesheet"  href="//code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />  
+	<link rel="stylesheet" href="../_assets/css/jqm-docs.css"/>
+
+	<script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="../../docs/_assets/js/jqm-docs.js"></script>
+	<script src="//code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
+
+</head> 
+<body> 
+
 <div data-role="dialog">
 	
-		<div data-role="header" data-theme="b">
+		<div data-role="header" data-theme="d">
 			<h1>Infos</h1>
 
 		</div>
@@ -14,6 +31,13 @@
 			<h3>eMail Adresse</h3>
 			<p>Bitte überprüfen Sie die Angaben Ihrer Email-Adresse. <br/>
 				Wir senden Ihnen zu dieser Adresse einen Bestätigungslink den Sie aufrufen 
-				um Ihr Profil auszufüllen bevor Sie die App voll nutzen können.</p>    
+				um Ihr Profil auszufüllen bevor Sie die App voll nutzen können.</p>
+			<p>
+				<a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="b">Zurück</a>
+			</p>    
 		</div>
 	</div>
+
+
+</body>
+</html>
