--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -47,7 +47,7 @@
         <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
-        <a data-role="button" data-transition="fade" href="arbeit_anbieten_branche1.html">
+        <a data-role="button" data-transition="fade" href="#page1">
             Arbeit anbieten
         </a>
         <div class="ui-grid-b">
