Arbeit anbieten files

--- a/drupalgap/pages/start.html
+++ b/drupalgap/pages/start.html
@@ -34,7 +34,7 @@
         <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
-        <a data-role="button" data-transition="fade" href="#page1">
+        <a data-role="button" data-transition="fade" href="arbeit_anbieten_branche1.html">
             Arbeit anbieten
         </a>
         <ul data-role="listview" data-theme="c" data-inset="true" data-dividertheme="c" data-counttheme="e">
