Arbeit finden Listenansicht

--- a/drupalgap/pages/arbeit_finden-listenansicht.html
+++ b/drupalgap/pages/arbeit_finden-listenansicht.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page1">
+<div data-role="page" id="drupalgap_page_arbeit_finden_list">
 	<div data-role="header">
   		<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
     	<h1>Arbeit finden</h1>
@@ -6,26 +6,7 @@
   	</div><!-- /header -->
 <!-- /header -->
     <div data-role="content">
-        <ul data-role="listview" data-divider-theme="c" data-inset="true">
-            <li data-role="list-divider" role="heading">
-                Arbeitsangebote in Ihrer Umgebung
-            </li>
-            <li data-theme="c">
-                <a href="#page1" data-transition="slide">
-                    <span class="title">Koch</span><span class="payment">15 € / Stunde</span><span class="distance">2,9 km</span>
-                </a>
-            </li>
-            <li data-theme="c">
-                <a href="#page1" data-transition="slide">
-                    <span class="title">Küchenchef</span><span class="payment">35 € / Stunde</span><span class="distance">2,9 km</span>
-                </a>
-            </li>
-            <li data-theme="c">
-                <a href="#page1" data-transition="slide">
-                    <span class="title">Minijob Küchenhilfe (Helfer/in - Küche)</span><span class="payment">8 € / Stunde</span><span class="distance">5.3 km</span>
-                </a>
-            </li>
-        </ul>
+        <ul data-role="listview" data-divider-theme="a" data-inset="true" id="drupalgap_page_arbeitsangebote_list"></ul>
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
