--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/user_login.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/user_register.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/welcome.js"></script>
+    <script type="text/javascript" charset="utf-8" src="drupalgap/pages/arbeit_finden-listenansicht.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/drupalgap.js"></script>
   </head>
    <body>
