Arbeit finden and Arbeit anbieten pages

--- a/drupalgap/pages/arbeit_finden-listenansicht.html
+++ b/drupalgap/pages/arbeit_finden-listenansicht.html
@@ -10,8 +10,13 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
-                    <a href="arbeit_finden-kartenansicht.html" data-theme="c" data-icon="grid">
+                    <a href="arbeit_finden_kartenansicht.html" data-theme="b">
                         Kartenansicht
+                    </a>
+                </li>
+                <li>
+                    <a href="filtern.html" data-theme="b">
+                        Filtern
                     </a>
                 </li>
             </ul>
