--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -47,12 +47,12 @@
         <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
-        <a data-role="button" data-transition="fade" href="arbeit_anbieten_branche1.html">
+        <a data-role="button" data-transition="fade" href="arbeit_anbieten_meine_arbeitsangebote.html">
             Arbeit anbieten
         </a>
         <div class="ui-grid-b">
             <div class="ui-block-a">
-                <a data-role="button" data-transition="fade" href="#page1">
+                <a data-role="button" data-transition="fade" href="einstellungen.html">
                     Einstellungen
                 </a>
             </div>
