--- a/drupalgap/dialogs/infos/dialog_info_register_name.html
+++ b/drupalgap/dialogs/infos/dialog_info_register_name.html
@@ -1,20 +1,3 @@
-
-<!DOCTYPE html> 
-<html>
-	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>jQuery Mobile Framework - Dialog Example</title> 
-	<link rel="stylesheet"  href="//code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />  
-	<link rel="stylesheet" href="../_assets/css/jqm-docs.css"/>
-
-	<script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="../../docs/_assets/js/jqm-docs.js"></script>
-	<script src="//code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
-
-</head> 
-<body> 
-
 <div data-role="dialog">
 	
 		<div data-role="header" data-theme="d">
@@ -33,11 +16,7 @@
 				Wir senden Ihnen zu dieser Adresse einen Bestätigungslink den Sie aufrufen 
 				um Ihr Profil auszufüllen bevor Sie die App voll nutzen können.</p>
 			<p>
-				<a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="b">Zurück</a>
+				<a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="b">Schließen</a>
 			</p>    
 		</div>
 	</div>
-
-
-</body>
-</html>
