--- a/drupalgap/pages/arbeit_anbieten_branche1.html
+++ b/drupalgap/pages/arbeit_anbieten_branche1.html
@@ -1,17 +1,16 @@
         <div data-role="page" id="page1">
             <div data-theme="a" data-role="header">
                 <h3>
-                    Branche
+                    Schritt 1/6
                 </h3>
-                <a data-role="button" data-transition="fade" data-theme="b" href="dashboard.html" 
-                   data-icon="home" data-iconpos="left">
-                    Home
+                <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_meine_arbeitsangebote.html" data-icon="back" data-iconpos="left">
+                    Zurück
                 </a>
             </div>
             <div data-role="content">
                 <ul data-role="listview" data-divider-theme="b" data-inset="true">
                     <li data-role="list-divider" role="heading">
-                        Schritt 1/6
+                        Branche
                     </li>
                     <li data-theme="c">
                         <a href="arbeit_anbieten_branche2.html" data-transition="fade">
