--- a/drupalgap/pages/arbeit_anbieten_pruefung.html
+++ b/drupalgap/pages/arbeit_anbieten_pruefung.html
@@ -138,10 +138,10 @@
                         </div>
                     </div>
                 </div>
-                <a data-role="button" data-transition="fade" data-theme="b" href="dashboard.html" data-icon="plus"
+                <a class="info" href="dialog_info_angebot_erfolgreich.html" data-rel="dialog" data-role="button" data-transition="pop" data-theme="b" data-icon="plus"
                     data-iconpos="right">
                     Speichern
-                </a>
+                </a>    
                 <a data-role="button" data-transition="fade" data-theme="b" href="dashboard.html" data-icon="alert" 
                     data-iconpos="right">
                     Abbrechen
