--- a/drupalgap/pages/arbeit_finden-listenansicht.html
+++ b/drupalgap/pages/arbeit_finden-listenansicht.html
@@ -2,24 +2,13 @@
 	<div data-role="header">
   		<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
     	<h1>Arbeit finden</h1>
-    	<a href="einstellungen-filter-arbeit_finden.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_arbeit_finden_button_filtern">Filtern</a>
+    	<a href="filtern.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_arbeit_finden_button_filtern">Filtern</a>
   	</div><!-- /header -->
 <!-- /header -->
     <div data-role="content">
         <ul data-role="listview" data-divider-theme="a" data-inset="true" id="drupalgap_page_arbeitsangebote_list"></ul>
-        <div data-role="navbar" data-iconpos="top">
-            <ul>
-                <li>
-                    <a href="arbeit_finden_kartenansicht.html" data-theme="b">
-                        Kartenansicht
-                    </a>
-                </li>
-                <li>
-                    <a href="filtern.html" data-theme="b">
-                        Filtern
-                    </a>
-                </li>
-            </ul>
-        </div>
     </div>
+    <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_finden_kartenansicht.html" data-icon="check" data-iconpos="left">
+        Kartenansicht
+    </a>        
         </div>
