--- a/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
+++ b/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
@@ -1,67 +1,15 @@
-        <div data-role="page" id="page1">
-            <div data-theme="a" data-role="header">
-                <h5>
-                    Meine Arbeitsangebote
-                </h5>
-                <a data-role="button" data-transition="fade" data-theme="b" href="dashboard.html" data-icon="back" data-iconpos="left">
-                    Zurück
-                </a>
-            </div>
-            <div data-role="content">
-                <div class="ui-grid-a">
-                    <div class="ui-block-a">
-                        <h3>
-                            Stelle
-                        </h3>
-                    </div>
-                    <div class="ui-block-b">
-                        <h3>
-                            Bewerber
-                        </h3>
-                    </div>
-                    <div class="ui-block-a">
-                        <h5>
-                            PHP Entwickler
-                        </h5>
-                    </div>
-                    <div class="ui-block-b">
-                        <h5>
-                            1
-                        </h5>
-                    </div>
-                    <div class="ui-block-a">
-                        <h5>
-                            Koch
-                        </h5>
-                    </div>
-                    <div class="ui-block-b">
-                        <h5>
-                            Angenommen
-                        </h5>
-                    </div>
-                    <div class="ui-block-a">
-                        <h5>
-                            Küchenchef
-                        </h5>
-                    </div>
-                    <div class="ui-block-b">
-                        <h5>
-                            Unveröffentlicht
-                        </h5>
-                    </div>
-                    <div class="ui-block-a">
-                        <h5>
-                            Kellner
-                        </h5>
-                    </div>
-                    <div class="ui-block-b">
-                        <h5>
-                            5
-                        </h5>
-                    </div>
-                </div>
-                <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_branche1.html">
-                    Neues Angebot erstellen
-                </a>
-            </div>
-        </div>
+<div data-role="page" id="drupalgap_page_arbeit_anbieten_meine_angebote">
+	<div data-role="header">
+  		<a href="dashboard.html" data-icon="home" class="ui-btn-left">Home</a>
+    	<h1>Meine Arbeitsangebote</h1>
+  	</div><!-- /header -->
+    <!-- /header -->
+    <div data-role="content">
+        <ul data-role="listview" data-divider-theme="a" data-inset="true" 
+            id="meine_angebote_list">
+        </ul>
+    </div>
+    <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_branche1.html" data-icon="check" data-iconpos="left">
+        Neues Angebot erstellen
+    </a>        
+</div>
