--- a/drupalgap/pages/node_edit.html
+++ b/drupalgap/pages/node_edit.html
@@ -4,17 +4,21 @@
   </div><!-- /header -->
   <div data-role="content" class='content'>
     <div>
-      <label for="drupalgap_page_node_edit_title">Title</label>
+      <label for="drupalgap_page_node_edit_title">Title <span class="form-required" title="Diese Angabe wird benötigt.">*</span></label>
       <input type="text" id="drupalgap_page_node_edit_title" />
     </div>
-    <div>
+    <!-- TODO: implement clean for other content types -->
+    <div id="body">
       <label for="drupalgap_page_node_edit_body">Body</label>
       <textarea id="drupalgap_page_node_edit_body" rows="5"></textarea>
     </div>
+    
+    <div id="fields">
+    </div>
     <fieldset>
-      <div><button type="button" data-theme="b" id="drupalgap_page_node_edit_submit">Save</button></div>
-      <div><a href="#" data-role="button" id="drupalgap_page_node_edit_cancel">Cancel</a></div>
-      <div><a href="#" data-role="button" id="drupalgap_page_node_edit_delete">Delete</a></div>
+      <div><button type="button" data-theme="b" id="drupalgap_page_node_edit_submit">Speichern</button></div>
+      <div><a href="#" data-role="button" id="drupalgap_page_node_edit_cancel">Abbrechen</a></div>
+      <div><a href="#" data-role="button" id="drupalgap_page_node_edit_delete">Löschen</a></div>
     </fieldset>
   </div><!-- /content -->
 </div><!-- /page -->
