--- a/drupalgap/pages/arbeit_finden_kartenansicht.html
+++ b/drupalgap/pages/arbeit_finden_kartenansicht.html
@@ -1,24 +1,24 @@
-<div data-role="page" id="page1">
-    <div data-theme="a" data-role="header">
-        <h5>
-            Angebote in ihrer Umgebubg
-        </h5>
-    </div>
-    <div data-role="content">
-        <img src="https://maps.googleapis.com/maps/api/staticmap?center=Madison, WI&amp;zoom=14&amp;size=288x200&amp;markers=Madison, WI&amp;sensor=false" width="288" height="200" />
-        <div data-role="navbar" data-iconpos="top">
-            <ul>
-                <li>
-                    <a href="arbeit_finden-listenansicht.html" data-theme="a" data-icon="">
-                        Liste anzeigen
-                    </a>
-                </li>
-                <li>
-                    <a href="filtern.html" data-theme="a" data-icon="">
-                        Filtern
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+<div data-role="page" id="page_1">
+  	<div data-role="header">
+        <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_finden-listenansicht.html"
+            data-icon="back" data-iconpos="right">
+            Zurück
+        </a>
+    	<h1></h1>
+    	<a href="node_edit.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_node_button_edit" style='display: none;'>Edit</a>
+  	</div><!-- /header -->
+  	<div data-role="content" class='content'></div><!-- /content -->
+        <ul>
+            <li>
+                <a href="arbeit_finden-listenansicht.html" data-theme="a" data-icon="">
+                    Fertig
+                </a>
+            </li>
+            <li>
+                <a href="filtern.html" data-theme="a" data-icon="">
+                    Filtern
+                </a>
+            </li>
+        </ul>          
+  	</div><!-- /content -->
+</div><!-- /page -->
