verbindung zu eb.a7n, aa erstellen link zu node_edit hinzugefuegt

--- a/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
+++ b/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
@@ -9,7 +9,9 @@
             id="meine_angebote_list">
         </ul>
     </div>
+    <a href="node_edit.html" id="arbeitsangebot" data-role="button" data-transition="fade" data-theme="b" data-icon="check" data-iconpos="left">Neues Angebot erstellen</a>
+    
     <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_branche1.html" data-icon="check" data-iconpos="left">
-        Neues Angebot erstellen
+        Neues Angebot erstellen (mehrseitig)
     </a>        
 </div>
