aa node edit working link stly incompatibility with jqm fix

--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -20,7 +20,7 @@
 	<div data-role="content">
 		
 
-        <div data-role="collapsible-set" data-theme="c" data-content-theme="b">
+        <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
             <div data-role="collapsible" data-collapsed="false">
                 <h3>
                     Aktuelles Angebot!
@@ -62,7 +62,7 @@
                         <label for="toggleswitch1">
                             Live Suche
                         </label>
-                        <select name="toggleswitch1" id="toggleswitch1" data-theme="c" data-role="slider" data-mini="true">
+                        <select name="toggleswitch1" id="toggleswitch1" data-theme="b" data-role="slider" data-mini="true">
                             <option value="off">
                                 Aus
                             </option>
