--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="jquery/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="jquery/jquery.mobile-1.1.0.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="jquery/plugins/jquery-ui-map/jquery.ui.map.full.min.js"></script>
     <!-- plugins -->
     
     <link rel="stylesheet" type="text/css" href="jquery/plugins/datebox/jqm-datebox.min.css" />
