--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -13,14 +13,14 @@
 	</div><!-- /navbar -->
 	<div data-role="navbar" id="drupalgap_page_dashboard_navbar_authenticated">
 		<ul>
-			<li><a href="user.html" data-role="button" id="drupalgap_button_user_account">My Account</a></li>
+			<li><a href="user.html" data-role="button" id="drupalgap_button_user_account">Mein Account</a></li>
 			<li><a href="#" data-role="button" id="drupalgap_button_user_logout">Logout</a></li>
 		</ul>
 	</div><!-- /navbar -->
 	<div data-role="content">
 		
 
-        <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
+        <div data-role="collapsible-set" data-theme="c" data-content-theme="b">
             <div data-role="collapsible" data-collapsed="false">
                 <h3>
                     Aktuelles Angebot!
@@ -38,16 +38,16 @@
                     </div>
                     <div class="ui-block-b">
                         <a data-role="button" data-transition="fade" href="#page1">
-                            Hide
+                            Ausblenden
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <a data-role="button" data-transition="fade" href="arbeit_finden-listenansicht.html">
+        <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
-        <a data-role="button" data-transition="fade" href="arbeit_anbieten_meine_arbeitsangebote.html">
+        <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_meine_arbeitsangebote.html">
             Arbeit anbieten
         </a>
         <div class="ui-grid-b">
