User Page Format, serveral small fixes

--- a/drupalgap/pages/user.html
+++ b/drupalgap/pages/user.html
@@ -6,7 +6,11 @@
   </div><!-- /header -->
   <div data-role="content">
   	<div>
-  		<h2>Member since</h2>
+      <h2 id="drupalgap_page_user_name"></h2>
+      <h4>Emailadresse:</h4>
+      <p id="drupalgap_page_user_mail"></p>
+      
+  		<h4>Mitglied seit:</h4>
   		<p id="drupalgap_page_user_created"></p>
   	</div>
   </div><!-- /content -->
