comments in german
comments in german …

--- a/drupalgap/dialogs/infos/dialog_info_register_name.html
+++ b/drupalgap/dialogs/infos/dialog_info_register_name.html
@@ -12,10 +12,10 @@
 			<p>Leerzeichen, Punkte, Bindestriche, Apostrophe und Unterstriche sind erlaubt. Sonderzeichen sind nicht erlaubt.<br/>
 				Der Loginname ist für andere Benutzer als Anzeigename sichtbar.</p>
 			<h3>eMail Adresse</h3>
-			<p>Bitte überprüfen Sie die Angaben Ihrer Email-Adresse. <br/>
+			<!--<p>Bitte überprüfen Sie die Angaben Ihrer Email-Adresse. <br/>
 				Wir senden Ihnen zu dieser Adresse einen Bestätigungslink den Sie aufrufen 
 				um Ihr Profil auszufüllen bevor Sie die App voll nutzen können.</p>
-			<p>
+			<p>-->
 				<a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="b">Schließen</a>
 			</p>    
 		</div>
