--- a/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
+++ b/drupalgap/pages/arbeit_anbieten_meine_arbeitsangebote.html
@@ -10,6 +10,7 @@
         Neues Angebot erstellen (mehrseitig)
     </a>     
     <div data-role="content">
+        <h2 class="title">Meine Arbeitsangebote</h2>
         <ul data-role="listview" data-divider-theme="a" data-inset="true" 
             id="meine_angebote_list">
         </ul>
