--- a/drupalgap/pages/comment_edit.html
+++ b/drupalgap/pages/comment_edit.html
@@ -7,17 +7,17 @@
   </div><!-- /header -->
   <div data-role="content" class='content'>
     <div id='drupalgap_page_comment_edit_subject_container'>
-      <label for="drupalgap_page_comment_edit_subject">Subject</label>
+      <label for="drupalgap_page_comment_edit_subject">Betreff</label>
       <input type="text" id="drupalgap_page_comment_edit_subject" />
     </div>
     <div>
-      <label for="drupalgap_page_comment_edit_body">Comment</label>
+      <label for="drupalgap_page_comment_edit_body">Kommentar</label>
       <textarea id="drupalgap_page_comment_edit_body"></textarea>
     </div>
     <fieldset>
-      <div><button type="button" data-theme="b" id="drupalgap_page_comment_edit_submit">Save</button></div>
-      <div><a href="node.html" data-role="button" id="drupalgap_page_comment_edit_cancel">Cancel</a></div>
-      <div><a href="#" data-role="button" id="drupalgap_page_comment_edit_delete" style='display: none;'>Delete</a></div>
+      <div><button type="button" data-theme="b" id="drupalgap_page_comment_edit_submit">Speichern</button></div>
+      <div><a href="node.html" data-role="button" id="drupalgap_page_comment_edit_cancel">Abbrechen</a></div>
+      <div><a href="#" data-role="button" id="drupalgap_page_comment_edit_delete" style='display: none;'>Löschen</a></div>
     </fieldset>
   </div><!-- /content -->
 </div><!-- /page -->
