--- a/drupalgap/pages/node_arbeitsangebot.html
+++ b/drupalgap/pages/node_arbeitsangebot.html
@@ -5,13 +5,13 @@
             Zurück
         </a>
     	<h1></h1>
-    	<a href="node_edit.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_node_button_edit" style='display: none;'>Edit</a>
+    	<a href="node_edit.html" data-icon="gear" class="ui-btn-right" id="drupalgap_page_node_button_edit" style='display: none;'>Bearbeiten</a>
   	</div><!-- /header -->
   	<div data-role="content" class='content'></div><!-- /content -->
   	<div data-role="content" class='map'><div id="map_canvas"></div></div><!-- /content -->
   	<div data-role="content" style='display: none;' id='drupalgap_page_node_comments'>
 	  	<a href="comments.html" data-role='button' id='drupalgap_page_node_button_comments' data-theme="b"><span>&nbsp;</span></a>
-  		<a href="comment_edit.html" data-role='button' id='drupalgap_page_node_button_comment_edit'>Add Comment</a>
+  		<a href="comment_edit.html" data-role='button' id='drupalgap_page_node_button_comment_edit'>Kommentar hinzufügen</a>
   	</div><!-- /content -->
   	<div data-role="content" class='buttons'>
 		<a id="node-aa-show-map" data-role="button" data-transition="fade" data-theme="b" href="#" data-icon="check" data-iconpos="left">
