--- a/drupalgap/pages/comments.html
+++ b/drupalgap/pages/comments.html
@@ -1,7 +1,7 @@
 <div data-role="page" id="drupalgap_page_comments">
   <div data-role="header">
-  	<a href="node.html" data-icon="home" class="ui-btn-left">Back</a>
-    <h1>Comments</h1>
+  	<a href="node.html" data-icon="home" class="ui-btn-left">zurück</a>
+    <h1>Kommentare</h1>
   </div><!-- /header -->
   <div data-role="header" data-theme="c">
     	<h3></h3>
@@ -9,6 +9,6 @@
   <div data-role="content" id="drupalgap_page_comments_list">
   </div><!-- /content -->
   <div data-role="content">
-  	<a href="comment_edit.html" data-role='button' data-theme="b" style='display: none;' id='drupalgap_page_comments_button_comment_add'>Add Comment</a>
+  	<a href="comment_edit.html" data-role='button' data-theme="b" style='display: none;' id='drupalgap_page_comments_button_comment_add'>Kommentar hinzufügen</a>
   </div><!-- /content -->
 </div><!-- /page -->
