--- a/drupalgap/pages/node_edit.html
+++ b/drupalgap/pages/node_edit.html
@@ -1,6 +1,10 @@
 <div data-role="page" id="drupalgap_page_node_edit">
   <div data-role="header">
-    <h1></h1>
+      <a data-role="button" data-transition="fade" data-theme="b" href="dashboard.html"
+          data-icon="home" data-iconpos="right">
+          Home
+      </a>      
+      <h1></h1>
   </div><!-- /header -->
   <div data-role="content" class='content'>
     <div>
@@ -9,7 +13,7 @@
     </div>
     <!-- TODO: implement clean for other content types -->
     <div id="body">
-      <label for="drupalgap_page_node_edit_body">Body</label>
+      <label for="drupalgap_page_node_edit_body">Inhalt</label>
       <textarea id="drupalgap_page_node_edit_body" rows="5"></textarea>
     </div>
     
