--- a/drupalgap/pages/user_register.html
+++ b/drupalgap/pages/user_register.html
@@ -1,36 +1,111 @@
 <div data-role="page" id="drupalgap_page_user_register">
-  <div data-role="header">
-  	<a href="user_login.html" data-icon="home" class="ui-btn-left">Login</a>
-    <h1>Register</h1>
-  </div><!-- /header -->
-  <div data-role="content" class='content'>
-  	<div id='drupalgap_page_user_register_messages' class='messages'></div>
-  	  <p>
-      	<a class="info" href="../dialogs/infos/dialog_info_register_name.html" data-rel="dialog" data-transition="pop">Infos zum Login und Datenschutz</a>
-      </p>
-      <p>
-      	
-      </p>
-    <div>
-      <label for="drupalgap_user_register_name">Username *</label>
-      <input type="text" id="drupalgap_user_register_name" />
-    </div>
-    <div>
-      <label for="drupalgap_user_register_pass">eMail *</label>
-      <input type="text" id="drupalgap_user_register_mail" />
-    </div>
-    <fieldset>
-	    <div>
-	      <label for="drupalgap_user_register_pass">Passwort*</label>
-	      <input type="password" id="drupalgap_user_register_pass" />
-	    </div>
-	    <div>
-	      <label for="drupalgap_user_register_confirm_pass">Passwort bestätigen*</label>
-	      <input type="password" id="drupalgap_user_register_confirm_pass" />
-	    </div>
-    </fieldset>
-    <fieldset>
-      <div><button type="button" data-theme="b" id="drupalgap_user_register_submit">Account anlegen</button></div>
-    </fieldset>
-  </div><!-- /content -->
-</div><!-- /page -->
+    <div data-role="header">
+      <a href="user_login.html" data-icon="home" class="ui-btn-left">Login</a>
+
+      <h1>Register</h1>
+    </div><!-- /header -->
+
+    <div data-role="content" class='content'>
+      <div id='drupalgap_page_user_register_messages' class='messages'></div>
+
+      <p><a class="info" href="../dialogs/infos/dialog_info_register_name.html" data-rel=
+      "dialog" data-transition="pop">Infos zum Login und Datenschutz</a></p>
+
+      <div>
+        <label for="drupalgap_user_register_name">Benutzername *</label> <input type="text"
+        id="drupalgap_user_register_name" />
+      </div>
+
+      <div>
+        <label for="drupalgap_user_register_pass">eMail *</label> <input type="text" id=
+        "drupalgap_user_register_mail" />
+      </div>
+
+      <fieldset>
+        <div>
+          <label for="drupalgap_user_register_pass">Passwort*</label> <input type=
+          "password" id="drupalgap_user_register_pass" />
+        </div>
+
+        <div>
+          <label for="drupalgap_user_register_confirm_pass">Passwort
+          bestätigen*</label> <input type="password" id=
+          "drupalgap_user_register_confirm_pass" />
+        </div>
+      </fieldset>
+
+      <fieldset id="edit-locations-0" class="location form-wrapper">
+        <legend><span class="fieldset-legend">Standort</span></legend>
+
+        <div class="fieldset-wrapper">
+          <div class="form-item form-type-textfield form-item-locations-0-name">
+            <label for="edit-locations-0-name">Name des Ortes *</label> <input type="text"
+            class="form-text" maxlength="255" size="64" value="" name=
+            "locations[0][name]" id="edit-locations-0-name" />
+
+            <div class="description">
+              z.B. Zuhause, Eltern o.ä.
+            </div>
+          </div>
+
+          <div class="form-item form-type-textfield form-item-locations-0-street">
+            <label for="edit-locations-0-street">Straße *</label> <input type=
+            "text" class="form-text" maxlength="255" size="64" value="" name=
+            "locations[0][street]" id="edit-locations-0-street" />
+          </div>
+
+          <div class="form-item form-type-textfield form-item-locations-0-additional">
+            <label for="edit-locations-0-additional">Zusatzadresse</label> <input type=
+            "text" class="form-text" maxlength="255" size="64" value="" name=
+            "locations[0][additional]" id="edit-locations-0-additional" />
+          </div>
+
+          <div class="form-item form-type-textfield form-item-locations-0-postal-code">
+            <label for="edit-locations-0-postal-code">Postleitzahl *</label> <input type=
+            "text" class="form-text" maxlength="16" size="16" value="" name=
+            "locations[0][postal_code]" id="edit-locations-0-postal-code" />
+          </div>
+
+          <div class="form-item form-type-textfield form-item-locations-0-city">
+            <label for="edit-locations-0-city">Stadt *</label> <input type="text" class=
+            "form-text" maxlength="255" size="64" value="" name="locations[0][city]" id=
+            "edit-locations-0-city" />
+          </div>
+
+          <div class="form-item form-type-select form-item-locations-0-country">
+            <label for="edit-locations-0-country">Land *</label> 
+            <select name="locations[0][country]" id="edit-locations-0-country" class="location_auto_country form-select"><option value="">Please select</option><option value="xx">NOT LISTED</option><option value="af">Afghanistan</option><option value="al">Albanien</option><option value="dz">Algerien</option><option value="um">Amerikanisch-Ozeanien</option><option value="as">Amerikanisch-Samoa</option><option value="vi">Amerikanische Jungferninseln</option><option value="ad">Andorra</option><option value="ao">Angola</option><option value="ai">Anguilla</option><option value="aq">Antarktis</option><option value="ag">Antigua und Barbuda</option><option value="ar">Argentinien</option><option value="am">Armenien</option><option value="aw">Aruba</option><option value="az">Aserbaidschan</option><option value="au">Australien</option><option value="bs">Bahamas</option><option value="bh">Bahrain</option><option value="bd">Bangladesch</option><option value="bb">Barbados</option><option value="be">Belgien</option><option value="bz">Belize</option><option value="bj">Benin</option><option value="bm">Bermuda</option><option value="bt">Bhutan</option><option value="bo">Bolivien</option><option value="ba">Bosnien und Herzegowina</option><option value="bw">Botswana</option><option value="bv">Bouvetinsel</option><option value="br">Brasilien</option><option value="vg">Britische Jungferninseln</option><option value="io">Britisches Territorium im Indischen Ozean</option><option value="bn">Brunei</option><option value="bg">Bulgarien</option><option value="bf">Burkina Faso</option><option value="bi">Burundi</option><option value="cl">Chile</option><option value="cn">China</option><option value="ck">Cookinseln</option><option value="cr">Costa Rica</option><option value="cw">Curaçao</option><option value="cd">Demokratische Republik Kongo</option><option selected="selected" value="de">Deutschland</option><option value="dm">Dominica</option><option value="do">Dominikanische Republik</option><option value="dj">Dschibuti</option><option value="dk">Dänemark</option><option value="ci">Elfenbeinküste</option><option value="sv">El Salvador</option><option value="ec">Equador</option><option value="er">Eritrea</option><option value="ee">Estland</option><option value="fk">Falklandinseln</option><option value="fj">Fidschi</option><option value="fi">Finnland</option><option value="fr">Frankreich</option><option value="gf">Französisch-Guayana</option><option value="pf">Französisch-Polynesien</option><option value="tf">Französische Süd- und Antarktisgebiete</option><option value="fo">Färöer</option><option value="ga">Gabun</option><option value="gm">Gambia</option><option value="ge">Georgien</option><option value="gh">Ghana</option><option value="gi">Gibraltar</option><option value="gd">Grenada</option><option value="gr">Griechenland</option><option value="gl">Grönland</option><option value="gp">Guadeloupe</option><option value="gu">Guam</option><option value="gt">Guatemala</option><option value="gg">Guernsey</option><option value="gn">Guinea</option><option value="gw">Guinea-Bissau</option><option value="gy">Guyana</option><option value="ht">Haiti</option><option value="hm">Heard-und McDonald-Inseln</option><option value="hn">Honduras</option><option value="hk">Hongkong</option><option value="in">Indien</option><option value="id">Indonesien</option><option value="iq">Irak</option><option value="ir">Iran</option><option value="ie">Irland</option><option value="is">Island</option><option value="im">Isle of Man</option><option value="il">Israel</option><option value="it">Italien</option><option value="jm">Jamaika</option><option value="jp">Japan</option><option value="ye">Jemen</option><option value="je">Jersey</option><option value="jo">Jordanien</option><option value="ky">Kaimaninseln</option><option value="kh">Kambodscha</option><option value="cm">Kamerun</option><option value="ca">Kanada</option><option value="cv">Kap Verde</option><option value="kz">Kasachstan</option><option value="qa">Katar</option><option value="ke">Kenia</option><option value="kg">Kirgisistan</option><option value="ki">Kiribati</option><option value="cc">Kokosinseln</option><option value="co">Kolumbien</option><option value="km">Komoren</option><option value="hr">Kroatien</option><option value="cu">Kuba</option><option value="kw">Kuwait</option><option value="la">Laos</option><option value="lv">Latvia</option><option value="ls">Lesotho</option><option value="lb">Libanon</option><option value="lr">Liberia</option><option value="ly">Libyen</option><option value="li">Liechtenstein</option><option value="lt">Litauen</option><option value="lu">Luxemburg</option><option value="mo">Macao</option><option value="mg">Madagaskar</option><option value="mw">Malawi</option><option value="my">Malaysia</option><option value="mv">Malediven</option><option value="ml">Mali</option><option value="mt">Malta</option><option value="ma">Marokko</option><option value="mh">Marshallinseln</option><option value="mq">Martinique</option><option value="mr">Mauretanien</option><option value="mu">Mauritius</option><option value="yt">Mayotte</option><option value="mk">Mazedonien</option><option value="mx">Mexiko</option><option value="fm">Mikronesien</option><option value="md">Moldavien</option><option value="mc">Monaco</option><option value="mn">Mongolei</option><option value="me">Montenegro</option><option value="ms">Montserrat</option><option value="mz">Mosambik</option><option value="mm">Myanmar</option><option value="na">Namibia</option><option value="nr">Nauru</option><option value="np">Nepal</option><option value="nc">Neukaledonien</option><option value="nz">Neuseeland</option><option value="ni">Nicaragua</option><option value="nl">Niederlande</option><option value="an">Niederländische Antillen</option><option value="ne">Niger</option><option value="ng">Nigeria</option><option value="nu">Niue</option><option value="kp">Nordkorea</option><option value="nf">Norfolkinsel</option><option value="no">Norwegen</option><option value="mp">Nördliche Marianen</option><option value="om">Oman</option><option value="pk">Pakistan</option><option value="pw">Palau</option><option value="ps">Palästinensische Gebiete</option><option value="pa">Panama</option><option value="pg">Papua-Neuguinea</option><option value="py">Paraguay</option><option value="pe">Peru</option><option value="ph">Philippinen</option><option value="pn">Pitcairn</option><option value="pl">Polen</option><option value="pt">Portugal</option><option value="pr">Puerto Rico</option><option value="cg">Republik Kongo</option><option value="eh">Republik Sahara</option><option value="rw">Ruanda</option><option value="ro">Rumänien</option><option value="ru">Russland</option><option value="re">Réunion</option><option value="bl">Saint-Barthélemy</option><option value="mf">Saint-Martin</option><option value="pm">Saint-Pierre und Miquelon</option><option value="sb">Salomonen</option><option value="zm">Sambia</option><option value="ws">Samoa</option><option value="sm">San Marino</option><option value="st">Sao Tome und Principe</option><option value="sa">Saudi-Arabien</option><option value="se">Schweden</option><option value="ch">Schweiz</option><option value="sn">Senegal</option><option value="rs">Serbien</option><option value="sc">Seychellen</option><option value="sl">Sierra Leone</option><option value="zw">Simbabwe</option><option value="sg">Singapur</option><option value="sk">Slowakei</option><option value="si">Slowenien</option><option value="so">Somalia</option><option value="es">Spanien</option><option value="sj">Spitzbergen und Jan Mayen</option><option value="lk">Sri Lanka</option><option value="sh">St. Helena</option><option value="kn">St. Kitts und Nevis</option><option value="lc">St. Lucia</option><option value="vc">St. Vincent und die Grenadinen</option><option value="sd">Sudan</option><option value="sr">Surinam</option><option value="sz">Swasiland</option><option value="sy">Syrien</option><option value="za">Südafrika</option><option value="gs">Südgeorgien und die Südlichen Sandwichinseln</option><option value="kr">Südkorea</option><option value="tj">Tadschikistan</option><option value="tw">Taiwan</option><option value="tz">Tansania</option><option value="th">Thailand</option><option value="tl">Timor-Leste</option><option value="tg">Togo</option><option value="tk">Tokelau</option><option value="to">Tonga</option><option value="tt">Trinidad und Tobago</option><option value="td">Tschad</option><option value="cz">Tschechische Republik</option><option value="tn">Tunesien</option><option value="tm">Turkmenistan</option><option value="tc">Turks- und Caicosinseln</option><option value="tv">Tuvalu</option><option value="tr">Türkei</option><option value="ug">Uganda</option><option value="ua">Ukraine</option><option value="hu">Ungarn</option><option value="uy">Uruguay</option><option value="uz">Usbekistan</option><option value="vu">Vanuatu</option><option value="va">Vatikan</option><option value="ve">Venezuela</option><option value="ae">Vereinigte Arabische Emirate</option><option value="gb">Vereinigtes Königreich</option><option value="us">Vereinigte Staaten</option><option value="vn">Vietnam</option><option value="wf">Wallis und Futuna</option><option value="cx">Weihnachtsinsel</option><option value="by">Weißrussland</option><option value="cf">Zentralafrikanische Republik</option><option value="cy">Zypern</option><option value="eg">Ägypten</option><option value="gq">Äquatorialguinea</option><option value="et">Äthiopien</option><option value="ax">Åland</option><option value="at">Österreich</option></select>
+          </div>
+
+          <div class=
+          "form-item form-type-textfield form-item-locations-0-locpick-user-latitude">
+            <label for="edit-locations-0-locpick-user-latitude">Latitude *</label>
+            <input type="text" maxlength="20" size="16" value="" name=
+            "locations[0][locpick][user_latitude]" id=
+            "edit-locations-0-locpick-user-latitude" class=
+            "container-inline form-text" />
+          </div>
+
+          <div class=
+          "form-item form-type-textfield form-item-locations-0-locpick-user-longitude">
+            <label for="edit-locations-0-locpick-user-longitude">Longitude *</label>
+            <input type="text" class="form-text" maxlength="20" size="16" value="" name=
+            "locations[0][locpick][user_longitude]" id=
+            "edit-locations-0-locpick-user-longitude" />
+          </div>
+          <div class="description">
+            <br />
+            Geografische Breite und Länge (GPS). <!--Wenn die Felder leer bleiben, versucht das System die Daten zu ermitteln. -->
+          </div>
+          <div><a href="#" data-role="button" id="get-latlong">Aktuelle Koordinaten eintragen</a></div>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <div>
+          <button type="button" data-theme="b" id=
+          "drupalgap_user_register_submit">Account anlegen</button>
+        </div>
+      </fieldset>
+    </div><!-- /content -->
+  </div><!-- /page -->
