Added sample data button

--- a/drupalgap/pages/user_register.html
+++ b/drupalgap/pages/user_register.html
@@ -10,14 +10,14 @@
 
       <p><a class="info" href="../dialogs/infos/dialog_info_register_name.html" data-rel=
       "dialog" data-transition="pop">Infos zum Login und Datenschutz</a></p>
-
+      <div><a href="#" data-role="button" id="user_register_fill">Mit Beispieldaten füllen</a></div>
       <div>
         <label for="drupalgap_user_register_name">Benutzername *</label> <input type="text"
         id="drupalgap_user_register_name" />
       </div>
 
       <div>
-        <label for="drupalgap_user_register_pass">eMail *</label> <input type="text" id=
+        <label for="drupalgap_user_register_mail">eMail *</label> <input type="text" id=
         "drupalgap_user_register_mail" />
       </div>
 
