Phone Number for user locations within the registration process

--- a/drupalgap/pages/user_register.html
+++ b/drupalgap/pages/user_register.html
@@ -100,7 +100,10 @@
           <div><a href="#" data-role="button" id="get-latlong">Aktuelle Koordinaten eintragen</a></div>
         </div>
       </fieldset>
-
+      <div class="form-item form-type-textfield form-item-locations-0-phone">
+        <label for="edit-locations-0-phone">Mobilnummer </label>
+       <input type="text" class="form-text" maxlength="31" size="31" value="" name="locations[0][phone]" id="edit-locations-0-phone">
+      </div>
       <fieldset>
         <div>
           <button type="button" data-theme="b" id=
