--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/content.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/content_add.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/dashboard.js"></script>
-    <script type="text/javascript" charset="utf-8" src="drupalgap/pages/node.js"></script>
+    <!--<script type="text/javascript" charset="utf-8" src="drupalgap/pages/node.js"></script>-->
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/node_edit.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/setup.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/user.js"></script>
