display own location on arbeitsangebot

--- a/drupalgap/pages/node_arbeitsangebot.html
+++ b/drupalgap/pages/node_arbeitsangebot.html
@@ -9,6 +9,10 @@
   	</div><!-- /header -->
   	<div data-role="content" class='content'></div><!-- /content -->
   	<div data-role="content" class='map'><div id="map_canvas"></div></div><!-- /content -->
+    <div id="results" style="display:none;">
+        <!-- the directions will be loaded in the directions div -->
+        <div id="directions"></div>
+    </div>
   	<div data-role="content" style='display: none;' id='drupalgap_page_node_comments'>
 	  	<a href="comments.html" data-role='button' id='drupalgap_page_node_button_comments' data-theme="b"><span>&nbsp;</span></a>
   		<a href="comment_edit.html" data-role='button' id='drupalgap_page_node_button_comment_edit'>Kommentar hinzufügen</a>
