implemented flag support to hide arbeitsangebote

--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -18,26 +18,24 @@
 		</ul>
 	</div><!-- /navbar -->
 	<div data-role="content">
-		
-
-        <div data-role="collapsible-set" data-theme="c" data-content-theme="b">
+        <div id="current_aa" data-role="collapsible-set" data-theme="c" data-content-theme="b">
             <div data-role="collapsible" data-collapsed="false">
                 <h3>
                     Aktuelles Angebot!
                 </h3>
-                <div>
-                    <b>
+                <div id="current_aa_beschreibung">
+                    <strong>
                         Wir suchen für den 5. &amp; 6. Januar 2012 jemanden zum Schneeräumen da wir im Urlaub sind.
-                    </b>
+                    </strong>
                 </div>
                 <div class="ui-grid-a">
-                    <div class="ui-block-a">
-                        <a data-role="button" data-transition="fade" href="#page1">
+                    <div id="current_aa_details"  class="ui-block-a">
+                        <a id="" data-role="button" data-transition="fade" href="node_arbeitsangebot.html">
                             Details
                         </a>
                     </div>
-                    <div class="ui-block-b">
-                        <a data-role="button" data-transition="fade" href="#page1">
+                    <div id="current_aa_hide" class="ui-block-b">
+                        <a id="" data-role="button" data-transition="fade" href="#hideme">
                             Ausblenden
                         </a>
                     </div>
