--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script type="text/javascript" charset="utf-8" src="drupalgap/services/services.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/services/system.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/services/user.js"></script>
+    <script type="text/javascript" charset="utf-8" src="drupalgap/services/flag.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/services/views_datasource.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/comment.js"></script>
     <script type="text/javascript" charset="utf-8" src="drupalgap/pages/comment_edit.js"></script>
